# openbmc-packages

boot/uboot-aspeed/: Makefile
boot/uboot-aspeed/configs/: ast2150_config  ast2300_config
boot/uboot-aspeed/files/: aspeed
boot/uboot-aspeed/patches/: 01-Kconfig.patch  02-flags.patch  03-ethernet.patch
kernel/helper/: Makefile
kernel/helper/src/: Makefile  helpmain.c  proc_sysctl.c
kernel/hwmon/pwm/: Makefile
kernel/hwmon/pwm/src/: Makefile  pwm-aspeed.c
kernel/hwmon/tps2480/: Makefile
kernel/hwmon/tps2480/src/: Makefile  tps2480.c  tps2480.h
kernel/hwmon/tps2480/src/Documentation/hwmon/: tps2480
kernel/i2c_hw/: Makefile
kernel/i2c_hw/src/: Makefile  i2c-data.h  i2c-hardware.c  i2c-hardware.h  i2c-interrupt.c  i2c-transfer.c
kernel/ipmi-i2c/: Makefile
kernel/ipmi-i2c/src/: Makefile  ipmi_i2c.c
kernel/pwmtach/: Makefile
kernel/pwmtach/pwmtach/: Makefile  pwmtach_ioctl.h  pwmtachmain.c
kernel/pwmtach/pwmtach_hw/: Makefile  ast_pwmtach.c
lang/luajit/: Makefile
lang/luajit/patches/: 01-luaconf-path.patch  02-lua-fileno.patch
libs/alien/: Makefile
libs/lua-i2c/: Makefile
libs/lua-i2c/src/: Makefile  i2c.c
libs/lua-memc/: Makefile
libs/lua-struct/: Makefile
libs/lua-struct/src/: Makefile
libs/spice/: Makefile
libs/spice-protocol/: Makefile
network/services/spice-server-aspeed/: Makefile
utils/dtoverlay/: Makefile
utils/dtoverlay/src/: CMakeLists.txt
utils/freeipmi/: Makefile
utils/freeipmi/patches/: 01-musl-fix.patch
